feat: add Footer and Logo components; integrate TopLoader and Toaster in layout

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "daisyui": "^5.0.17",
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
+    "nextjs-toploader": "^3.8.16",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
