--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sonner": "^2.0.3"
+    "sonner": "^2.0.3",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
