--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.17",
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
@@ -20,7 +21,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
-    "theme-change": "^2.5.0"
+    "tailwind-merge": "^3.2.0",
+    "theme-change": "^2.5.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
